--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Keble UIPrototype
 email: thaddeus.renderwell@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Keble UIPrototype
-baseurl: "/keble.uiprototype" # the subpath of your site, e.g. /blog
-url: "http://renderwell.github.io" # the base hostname & protocol for your site
+baseurl: /keble.uiprototype # the subpath of your site, e.g. /blog
+url: http://renderwell.github.io # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
