--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Keble UIPrototype
-email: thaddeus.renderwell@gmail.com
+email: renderwell@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Keble UIPrototype
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -16,4 +16,3 @@ exclude:
 - Makefile
 - package.json
 - README.md
-
